package com.github.studeasy.dao.couponDAO;

/**
 * The Coupon DAO using a MySQL database
 * Contains all the methods accessing coupon related data
 */
public class MySQLCouponDAO extends CouponDAO{
}
