package com.github.studeasy.logic.facades;

/**
 * The coupon facade
 * It contains the methods coupon related
 */
public class FacadeCoupon {
}
